BugFix: Face data articles not displaying correctly sometimes on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -25,4 +25,5 @@
     background-color: var(--primary);
     color: var(--font-primary);
     padding-bottom: 48px;
+    overflow: hidden;
 }
